fixed ui on mobile

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -70,4 +70,9 @@ body {
     margin: 0;
     border-radius: 0;
   }
+
+  // mobile
+  @media only screen and (max-width: $bp-smallest) {
+    display: block;
+  }
 }
