--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,10 +5,21 @@
   align-items: center;
   justify-content: space-between;
 
+
   &__logo {
     margin-left: 4rem;
     height: 4.6rem;
     display: block;
+  }
+
+  // mobile
+  @media only screen and (max-width: 31.25em) {
+    flex-direction: column;
+
+    &__logo {
+      margin-left: 0;
+      margin: 1em 0;
+    }
   }
 }
 
@@ -102,12 +113,17 @@
       background-color: $color-grey-light-2;
     }
   }
+
+  // mobile
+  @media only screen and (max-width: 31.25em) {
+    align-self: auto;
+    margin: 2em 0;
+  }
 }
 
 .bookmarks {
   padding: 1rem 0;
   position: absolute;
-  // right: 0;
   right: -2.5rem;
   z-index: 10;
   width: 40rem;
