--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -1,12 +1,9 @@
 .recipe {
   background-color: $color-grey-light-1;
 
-  ///////////
-  // FIGURE
   &__fig {
     height: 32rem;
     position: relative;
-    // transform: scale(1.04) translateY(-1px);
     transform-origin: top;
 
     &::before {
@@ -17,11 +14,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      background-image: linear-gradient(
-        to right bottom,
-        $color-grad-1,
-        $color-grad-2
-      );
+      background-image: linear-gradient(to right bottom,
+          $color-grad-1,
+          $color-grad-2 );
       opacity: 0.6;
     }
   }
@@ -50,11 +45,9 @@
       -webkit-box-decoration-break: clone;
       box-decoration-break: clone;
       padding: 1.3rem 2rem;
-      background-image: linear-gradient(
-        to right bottom,
-        $color-grad-1,
-        $color-grad-2
-      );
+      background-image: linear-gradient(to right bottom,
+          $color-grad-1,
+          $color-grad-2 );
     }
 
     @media only screen and (max-width: $bp-medium) {
