--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -12,6 +12,7 @@
   z-index: 1000;
   transition: all 0.5s;
 
+
   .btn--close-modal {
     font-family: inherit;
     color: inherit;
@@ -22,6 +23,12 @@
     cursor: pointer;
     border: none;
     background: none;
+  }
+
+  // mobile
+  @media only screen and (max-width: $bp-smallest) {
+    width: 100%;
+    margin: 0 1em;
   }
 }
 
@@ -81,6 +88,11 @@
       grid-column: 1 / span 2;
       justify-self: center;
       margin-top: 1rem;
+    }
+
+    // mobile
+    @media only screen and (max-width: $bp-smallest) {
+      display: block;
     }
   }
 
